--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
   }
 }
 
+.H1{
+  align-items: center;
+  justify-content: center;
+}
 .App-header {
   background-color: #000000;
   min-height: 100vh;
