--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,10 +1,10 @@
 .login-container {
-    max-width: 30%;
+    max-width: 30em;
     margin: auto;
     padding: 20px;
     border: 1px solid #ffffff;
     border-radius: 5px;
-
+    
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
   
